[package]
name = "hos"
version = "0.5.0"
authors = ["Bryan Maynard <bsgbryan@gmail.com>"]
edition = "2024"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

# Optional
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

# Platform specific
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "=10.0.0" }
