[package]
authors = ["Bryan Maynard <bsgbryan@gmail.com>"]
description = "The kernel for HOS: the Happy Operating System 😊"
edition = "2021"
license.workspace = true
name = "hos_kernel"
repository.workspace = true
version.workspace = true

[[bin]]
name = "hos_kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.2"
embedded-graphics = "0.8.1"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
spin = "0.5.2"
pc-keyboard = "0.5.0"
volatile = "0.2.6"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
